2001-08-27  Wayne Davison  <wayned@users.sourceforge.net>

	* 15713: Completion/Redhat/Command/_rpm: added package-specification
	options to the --verify command.

2001-08-27  Bart Schaefer  <schaefer@zsh.org>

	* 15708: Src/lex.c: Fix PS2 prompt when there's an open double
	quote inside an open braced-parameter expression.

2001-08-25  Bart Schaefer  <schaefer@zsh.org>

	* 15707: Src/init.c: Fix history crash caused by re-entering
	loop() when the `precmd' shell function uses `source' or `.'.

	* 15702: Doc/Zsh/expn.yo: Alphabetize (mostly) parameter flag
	descriptions; fix a couple of typos; parameter rule #12.
	
2001-08-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 15705: Src/Zle/complete.c: test if hash table pointer is NULL
	to avoid SEGV with compstate=()

2001-08-22  Clint Adams  <clint@zsh.org>

	* 15683: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_links: completion for
	links(1).

2001-08-22  Bart Schaefer  <schaefer@zsh.org>

	* 15676: Test/A01grammar.ztst, Test/A05execution.ztst,
	Test/C02cond.ztst, Test/D04parameter.ztst, Test/E01options.ztst,
	Test/E02xtrace.ztst, Test/Y01completion.ztst,
	Test/Y03arguments.ztst:  Tweak %prep sections to exit sooner on
	certain failures (by adding blank lines).  Other whitespace-only
	changes.  Avoid [[ ! -r ... ]] test when running as root, as it
	always fails in that case.  Test `typeset -ft' (function trace).
	
	* 15608: Completion/Zsh/Command/_cd: Don't treat numbers as
	cd-able vars.

2001-08-21  Clint Adams  <clint@zsh.org>

	* 15675: Src/Builtins/rlimits.awk: handle case
	where RLIM_NLIMITS is set to a number within an
	enum.

2001-08-21  Bart Schaefer  <schaefer@zsh.org>

	* users/4157 (plus workers/15674): Completion/Unix/Command/_man:
	Better handling of section numbers.

2001-08-20  Sven Wischnowsky  <wischnow@zsh.org>

	* 15669: Completion/Base/Completer/_approximate,
	Src/Zle/compcore.c: undo most of 15650, do that in shell code

2001-08-18  Bart Schaefer  <schaefer@zsh.org>
