@@ -1,3 +1,9 @@
+2001-08-28  Sven Wischnowsky  <wischnow@zsh.org>
+
+	* 15717: Src/subst.c, Src/Modules/parameter.c,
+	Src/Zle/zle_misc.c: handle possible NULL pointer returned from
+	bufferwords()
+
 2001-08-27  Wayne Davison  <wayned@users.sourceforge.net>
 
 	* 15713: Completion/Redhat/Command/_rpm: added package-specification
